--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,41 @@
-/*  your css code here. If applicable */
 * {
     padding: 0;
     margin: 0;
 }
-body{
-	height: 100vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+body {
+    background: rgb(202, 221, 242);
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .code-container{
-	 min-height: 150px;
+    /* border: 1px solid red; */
+    min-height: 150px;
 }
-.container{
-	width: 80%;
-	height: 80%;
-	padding: 30px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-around;
-	align-items: center;
-	
-}
-.code{
-	height: 50px;
-	width: 50px;
-	text-align: center;
-	font-size: 2rem;
-}
+.container {
 
+    background: rgba(167, 184, 218, 0.607);
+    box-shadow: 0 0 20px rgb(68, 68, 68);
+    border-radius: 10px;
+    width: 80%;
+    height: 80%;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.code {
+    box-shadow: 0 0 10px rgb(68, 68, 68);
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    font-size: 2rem;
+}
 .code:focus {
     border-bottom: 3px solid rgba(78, 126, 224, 0.607);
 }
-
